--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="pdf_back">#CB0606</color>
+    <color name="word_back">#1074CC</color>
+    <color name="excell_back">#07630E</color>
+
 </resources>
