--- a/app/src/main/res/layout/fragment_my_fragment1.xml
+++ b/app/src/main/res/layout/fragment_my_fragment1.xml
@@ -4,9 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".library_fragment">
+
+    tools:context=".FileFragments.pdf_fragment">
 
     <androidx.recyclerview.widget.RecyclerView
+
         android:id="@+id/recycl"
         android:layout_width="match_parent"
         android:layout_height="0dp"
