--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,8 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="bottomSheet_animation">
+        <item name="android:windowEnterAnimation">@anim/botom_sheet_in</item>
+        <item name="android:windowExitAnimation">@anim/botom_sheet_out</item>
+    </style>
 </resources>
